--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
   color-scheme: light;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #ffffff;
-  color: white;
+  color: rgb(255, 255, 255);
   letter-spacing: -0.025em; /* Adjust the value as needed */
 }
 
@@ -16,7 +16,6 @@ body {
   min-height: 100%;
   font-size: 1.125rem;
   background-color: #ffffff;
-  color: white;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -33,8 +32,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 24px 0;
-  background: transparent;
+  padding: 4px 0;
+  background: black;
 }
 
 .font-bold {
@@ -45,7 +44,6 @@ body {
   flex: 1;
   display: flex;
   justify-content: center;
-  padding: 120px 24px;
   text-align: center;
 }
 
@@ -55,14 +53,26 @@ body {
   margin-right: auto;
   display: flex;
   flex-direction: column;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   line-height: 1.7;
+  padding: 80px;
+}
+
+.blur-block {
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .site-footer {
-  padding: 40px 16px 80px;
+  font-size: small;
+  padding: 8px;
   text-align: center;
-  color: white;
+  color: black;
+  background: white;
 }
 
 .site-footer .footer-link {
@@ -77,15 +87,11 @@ body {
 
 .site-footer .footer-sep {
   margin: 0 10px;
-  color: white;
+  color: black;
 }
 
 @media (max-width: 640px) {
   .simple-page {
-    padding: 80px 20px;
-  }
-
-  .simple-page__inner {
-    font-size: 1.05rem;
+    padding: 60px 0px;
   }
 }
