--- a/app/globals.css
+++ b/app/globals.css
@@ -38,11 +38,11 @@ p {
 }
 
 .font-bold {
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .p-shadow {
-  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .simple-page {
@@ -56,12 +56,12 @@ p {
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 0.8;
-  padding-left: 80px;
-  padding-right: 80px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-left: 86px;
+  padding-right: 86px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .site-footer {
@@ -161,10 +161,15 @@ p {
   .simple-page__inner {
     padding-left: 12px;
     font-size: 2rem;
+    padding-right: 0px;
   }
 
   .footer-content {
     gap: 24px;
+  }
+
+  p {
+    margin: 8px;
   }
 
   .footer-column {
