--- a/app/globals.css
+++ b/app/globals.css
@@ -38,10 +38,12 @@ p {
 }
 
 .site-nav {
-  background-color: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(2px); /* keep text legible against background image */
+  background-color: rgba(255, 255, 255, 0.811);
+  backdrop-filter: blur(px); /* keep text legible against background image */
   border-radius: 24px;
+  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.1);
   display: inline-flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
   gap: 64px;
@@ -52,15 +54,26 @@ p {
 }
 
 .site-nav__link {
-  color: white;
-  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  color: rgb(60, 60, 60);
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
+  display: inline-block;
 }
 
 .site-nav__link:hover {
   font-weight: 600;
+}
+
+.site-nav__link::after {
+  content: attr(data-label);
+  font-weight: 600;
+  visibility: hidden;
+  display: block;
+  height: 0;
+  pointer-events: none;
+  overflow: hidden;
+  line-height: 0;
 }
 
 .font-bold {
