--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 :root {
   color-scheme: light;
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #ffffff;
   color: rgb(255, 255, 255);
   letter-spacing: -0.025em; /* Adjust the value as needed */
@@ -95,8 +95,10 @@ p {
   line-height: 0;
 }
 
+strong,
+b,
 .font-bold {
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .p-shadow {
